--- a/log.html
+++ b/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,5391],[],[[5,0,6,[7,8],[1,418,4969],[[1,9,10,0,0,0,0,0,[1,420,1979],[[0,11,12,0,13,14,0,0,[1,421,1794],[[421,2,15]]],[0,16,12,0,17,0,0,0,[1,2215,183],[]]]],[0,18,10,0,0,0,0,0,[1,2400,2978],[[0,19,12,0,20,21,0,0,[1,2400,2850],[[2401,2,22]]],[0,23,12,0,24,25,0,0,[1,5251,126],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,7241],[],[[5,0,6,[7,8],[0,429,6811,9],[[1,10,11,0,0,0,0,0,[1,431,2990],[[0,12,13,0,14,15,0,0,[1,431,2826],[[432,2,16]]],[0,17,13,0,18,0,0,0,[1,3257,163],[]]]],[0,19,11,0,0,0,0,0,[1,3422,3307],[[0,20,13,0,21,22,0,0,[1,3423,3134],[[3424,2,23]]],[0,24,13,0,25,26,0,0,[1,6557,172],[]]]],[0,27,11,0,0,0,0,0,[0,6730,506],[[0,28,13,0,29,30,0,0,[0,6731,504],[[7230,2,31],[7231,5,9]]]]],[0,32,11,0,0,0,0,0,[3,7237,0],[]],[0,33,11,0,0,0,0,0,[3,7237,1],[]],[0,34,11,0,0,0,0,0,[3,7238,0],[]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\carlo\\Course\\Robot FrameWork\\Módulos\\Módulo 03\\RobotFramework\\WebTesting\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Abrir o navegador","*amazon_resources","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*browser=chrome","*Opening browser 'chrome' to base url 'None'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Acessar a home page do site Amazon.com.br","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*url=${URL}","*Opening url '<a href=\"http://www.amazon.com.br\">http://www.amazon.com.br\x3c/a>'","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*locator=${MENU_ELETRONICOS}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\carlo\\Course\\Robot FrameWork\\Módulos\\Módulo 03\\RobotFramework\\WebTesting\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Title should have been 'Qualquer titulo' but was 'Amazon.com.br | Tudo pra você, de A a Z.'.","*Abrir o navegador","*amazon_resources","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*browser=chrome","*Opening browser 'chrome' to base url 'None'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Acessar a home page do site Amazon.com.br","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*url=${URL}","*Opening url '<a href=\"http://www.amazon.com.br\">http://www.amazon.com.br\x3c/a>'","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*locator=${MENU_ELETRONICOS}","*Verificar se o título da página fica &quot;Qualquer titulo&quot;","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*title=${TITULO}","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-5.png\"><img src=\"selenium-screenshot-5.png\" width=\"800px\">\x3c/a>","*Entrar no menu &quot;Eletrônicos&quot;","*Verificar se aparece a frase &quot;Eletrônicos e Tecnologia&quot;","*Verificar se o título da página fica &quot;Eletrônicos e Tecnologia | Amazon.com.br&quot;"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"label":"menus","pass":1,"skip":0}],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:07","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:07","fail":1,"label":"categorias","pass":0,"skip":0},{"elapsed":"00:00:07","fail":1,"label":"menus","pass":0,"skip":0}],[{"elapsed":"00:00:07","fail":1,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1661572246793;
+window.output["baseMillis"] = 1661575981869;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5426;
+window.output["generated"] = 7265;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
