--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,7241],[],[[5,0,6,[7,8],[0,429,6811,9],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,14908],[],[[5,0,6,[7,8],[1,434,14472],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\carlo\\Course\\Robot FrameWork\\Módulos\\Módulo 03\\RobotFramework\\WebTesting\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Title should have been 'Qualquer titulo' but was 'Amazon.com.br | Tudo pra você, de A a Z.'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\carlo\\Course\\Robot FrameWork\\Módulos\\Módulo 03\\RobotFramework\\WebTesting\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:07","fail":1,"label":"categorias","pass":0,"skip":0},{"elapsed":"00:00:07","fail":1,"label":"menus","pass":0,"skip":0}],[{"elapsed":"00:00:07","fail":1,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:14","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"label":"menus","pass":1,"skip":0}],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1661575981869;
+window.output["baseMillis"] = 1661815765083;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7265;
+window.output["generated"] = 14955;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
