--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,14908],[],[[5,0,6,[7,8],[1,434,14472],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,34192],[],[[5,0,6,[7,8],[1,503,19031],[]],[9,0,10,[11,12],[1,19536,14651],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\carlo\\Course\\Robot FrameWork\\Módulos\\Módulo 03\\RobotFramework\\WebTesting\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\carlo\\Course\\Robot FrameWork\\Módulos\\Módulo 03\\RobotFramework\\WebTesting\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Caso de Teste 02 - Pesquisa de um Produto","*<p>Esse teste verifica a busca de um produto\x3c/p>","*busca_produtos","*lista_busca"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:14","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"label":"menus","pass":1,"skip":0}],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:15","fail":0,"label":"busca_produtos","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"label":"lista_busca","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"label":"menus","pass":1,"skip":0}],[{"elapsed":"00:00:34","fail":0,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1661815765083;
+window.output["baseMillis"] = 1661914185691;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14955;
+window.output["generated"] = 34257;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
