--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,34192],[],[[5,0,6,[7,8],[1,503,19031],[]],[9,0,10,[11,12],[1,19536,14651],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,105887],[],[[5,0,6,[7,8],[0,778,23906,9],[]],[10,0,11,[12,13],[1,24687,18431],[]],[14,0,15,[16],[1,43121,26835],[]],[17,0,18,[19],[1,69960,35924],[]]],[],[4,3,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\carlo\\Course\\Robot FrameWork\\Módulos\\Módulo 03\\RobotFramework\\WebTesting\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Caso de Teste 02 - Pesquisa de um Produto","*<p>Esse teste verifica a busca de um produto\x3c/p>","*busca_produtos","*lista_busca"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\carlo\\Course\\Robot FrameWork\\Módulos\\Módulo 03\\RobotFramework\\WebTesting\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Element with locator '//a[contains(.,'Criar sua conta da Amazon')]' not found.","*Caso de Teste 02 - Pesquisa de um Produto","*<p>Esse teste verifica a busca de um produto\x3c/p>","*busca_produtos","*lista_busca","*Caso de Teste 03 - Adicionar Produto no Carrinho","*<p>Esse teste verifica a adição de um produto no carrinho de compras\x3c/p>","*adicionar_carrinho","*Caso de Teste 04 - Remover Produto do Carrinho","*<p>Esse teste verifica a remoção de um produto no carrinho de compras\x3c/p>","*remover_carrinho"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:15","fail":0,"label":"busca_produtos","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"label":"lista_busca","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"label":"menus","pass":1,"skip":0}],[{"elapsed":"00:00:34","fail":0,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:45","fail":1,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:27","fail":0,"label":"adicionar_carrinho","pass":1,"skip":0},{"elapsed":"00:00:18","fail":0,"label":"busca_produtos","pass":1,"skip":0},{"elapsed":"00:00:24","fail":1,"label":"categorias","pass":0,"skip":0},{"elapsed":"00:00:18","fail":0,"label":"lista_busca","pass":1,"skip":0},{"elapsed":"00:00:24","fail":1,"label":"menus","pass":0,"skip":0},{"elapsed":"00:00:36","fail":0,"label":"remover_carrinho","pass":1,"skip":0}],[{"elapsed":"00:01:46","fail":1,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1661914185691;
+window.output["baseMillis"] = 1662052190562;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 34257;
+window.output["generated"] = 106024;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
